--- a/front/package.json
+++ b/front/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-icons": "^3.8.0",
+    "react-perfect-scrollbar": "^1.5.3",
+    "react-recaptcha": "^2.3.10",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "reactstrap": "^8.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
